## airsched/factory sub-directory
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

#
noinst_LTLIBRARIES = libairschedfac.la

libairschedfac_la_SOURCES = $(airsched_fac_h_sources) $(airsched_fac_cc_sources) 
libairschedfac_la_CXXFLAGS = $(STDAIR_CFLAGS)
libairschedfac_la_LDFLAGS =

#
#pkgincludedir = $(includedir)/@PACKAGE@/factory
#pkginclude_HEADERS = $(airsched_fac_h_sources)

