# avlcal/batches
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

## Source directory

MAINTAINERCLEANFILES = Makefile.in

# Binaries (batches)
bin_PROGRAMS =

#avlcal_SOURCES = $(avlcal_batches_h_sources) $(avlcal_batches_cc_sources)
#avlcal_CXXFLAGS = $(BOOST_CFLAGS)
#avlcal_LDADD =
#avlcal_LDFLAGS = $(BOOST_PROGRAM_OPTIONS_LIB) $(top_builddir)/avlcal/core/libavlcal.la

