## dsim/basic sub-directory
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

#
noinst_LTLIBRARIES = libdsimbas.la

libdsimbas_la_SOURCES = $(dsim_bas_h_sources) $(dsim_bas_cc_sources) 
libdsimbas_la_CXXFLAGS = $(STDAIR_CFLAGS)
libdsimbas_la_LDFLAGS =

#
#pkgincludedir = $(includedir)/@PACKAGE@/basic
#pkginclude_HEADERS = $(dsim_bas_h_sources)
