## dsim/bom sub-directory
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

#
noinst_LTLIBRARIES = libdsimbom.la

libdsimbom_la_SOURCES = $(dsim_bom_h_sources) $(dsim_bom_cc_sources) 
libdsimbom_la_CXXFLAGS = $(STDAIR_CFLAGS)
libdsimbom_la_LDFLAGS =

#
#pkgincludedir = $(includedir)/@PACKAGE@/bom
#pkginclude_HEADERS = $(dsim_bom_h_sources)
