## simcrs/basic sub-directory
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

#
noinst_LTLIBRARIES = libsimcrsbas.la

libsimcrsbas_la_SOURCES = $(simcrs_bas_h_sources) $(simcrs_bas_cc_sources) 
libsimcrsbas_la_CXXFLAGS = $(STDAIR_CFLAGS)
libsimcrsbas_la_LDFLAGS =


#
#pkgincludedir = $(includedir)/@PACKAGE@/basic
#pkginclude_HEADERS = $(simcrs_bas_h_sources)

